Integrated pyicub-frontend v8.0

--- a/base/pyicub-frontend/.devcontainer.json
+++ b/base/pyicub-frontend/.devcontainer.json
@@ -2,8 +2,7 @@
 	"build": 
 	{ 
 			"dockerfile": "Dockerfile",
-			"args": { "DOCKER_SRC": "${localEnv:DOCKER_SRC}",
-					  "PYICUB_FRONTEND_VERSION": "${localEnv:PYICUB_FRONTEND_VERSION}" }
+			"args": { "PYICUB_FRONTEND_VERSION": "${localEnv:PYICUB_FRONTEND_VERSION}" }
 	}
   
 }
