--- a/base/pyicub-frontend/Dockerfile
+++ b/base/pyicub-frontend/Dockerfile
@@ -22,31 +22,18 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
-FROM node:16
-
+FROM node:21
 ARG PYICUB_FRONTEND_VERSION=master
-
 RUN mkdir /app
 WORKDIR /app
-
-# Create react app
-RUN npx create-react-app pyicub-frontend
-
-# Define work directory
-WORKDIR /app/pyicub-frontend
-
-RUN npm ci
-RUN npm install @mui/material @emotion/react @emotion/styled
-RUN npm install bootstrap@3
-RUN npm install react-iframe
-RUN npm install react-router-dom@6
-RUN npm i react-icons
-RUN npm install http-proxy-middleware --save
-
-RUN mkdir -p /root/.vscode-server /root/.vscode-server-insiders
+ 
 RUN git clone https://github.com/s4hri/pyicub-frontend -b master tmp
+ 
 RUN cd tmp && git checkout ${PYICUB_FRONTEND_VERSION}
 RUN cp -a tmp/. /app/pyicub-frontend/
 RUN rm -rf tmp
-
-CMD ["npm", "start"]
+# Define work directory
+WORKDIR /app/pyicub-frontend
+RUN npm install
+ 
+CMD npm run production -- --port ${PYICUB_API_FRONTEND_PORT}
