--- a/compose.base.yaml
+++ b/compose.base.yaml
@@ -22,6 +22,7 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
+version: '3.8'
 
 services:
   
@@ -50,7 +51,6 @@ services:
       service: dockyman
 
     environment:
-      - DOCKER_SRC=${PYICUB_BASE_DOCKER_SRC}
       - PYICUB_FRONTEND_VERSION=${PYICUB_FRONTEND_VERSION}
     
     command: --image_name ${PYICUB_FRONTEND_BASE_NAME:?err} --workspace_folder ./base/pyicub-frontend
