--- a/build.env
+++ b/build.env
@@ -2,13 +2,13 @@ DOCKYMAN_VER=v1.1
 REPOSITORY=iitschri
 PROFILE=development
 
-VERSION=v7.3-distro_v2022.02.0-ubuntu20.04
-ICUB_DISTRO=v2022.02.0-ubuntu20.04
+VERSION=v7.4-ng
 
+ICUB_DISTRO=v2022.02.0-ubuntu20.04
 PYICUB_BASE_DOCKER_SRC=${REPOSITORY}/robotology-superbuild-docker:${ICUB_DISTRO}
 PYICUB_BASE_NAME=${REPOSITORY}/pyicub-docker:${VERSION}
-PYICUB_VERSION=${VERSION}
-PYICUB_FRONTEND_VERSION=v8.0-distro_${ICUB_DISTRO}
+PYICUB_VERSION=v7.4-distro_v2022.02.0-ubuntu20.04
+PYICUB_FRONTEND_VERSION=v8.0-ng
 PYICUB_FRONTEND_BASE_NAME=${REPOSITORY}/pyicub-frontend-docker:${PYICUB_FRONTEND_VERSION}
 
 COMPOSE_PROFILES=restapi
