--- a/icub.env
+++ b/icub.env
@@ -7,7 +7,7 @@ ICUB_IP=10.0.0.2
 ICUBSRV_HOST=icubsrv
 ICUBSRV_IP=10.0.0.1
 ICUBSRV_PORT=10000
-ICUB_APPS=/workdir
+ICUB_APPS=/workdir/apps
 
 # YARP configuration
 YARP_FORWARD_LOG_ENABLE=1
