--- a/pyicub.env
+++ b/pyicub.env
@@ -2,9 +2,8 @@ PYICUB_LOGGING=true
 PYICUB_LOGGING_PATH=/workdir/logs
 PYICUB_API=true
 PYICUB_API_FRONTEND_PORT=9000
-PYICUB_API_PROXY_HOST=0.0.0.0
+PYICUB_API_RESTMANAGER_HOST=localhost
+PYICUB_API_RESTMANAGER_PORT=9001
+PYICUB_API_PROXY_HOST=localhost
 PYICUB_API_PROXY_PORT=9001
-REACT_APP_NAME=pywebapp
-PORT=${PYICUB_API_FRONTEND_PORT}
-REACT_APP_API=pyicub
-REACT_APP_PROXY=http://${PYICUB_API_PROXY_HOST}:${PYICUB_API_PROXY_PORT}
+PYICUB_API_PROXY_SCHEME=http
