--- a/.dockyman/profiles/local.yaml
+++ b/.dockyman/profiles/local.yaml
@@ -35,6 +35,7 @@ services:
         - XDG_DATA_DIRS=${XDG_DATA_DIRS:?err}
         - QT_X11_NO_MITSHM=1
         - NO_AT_BRIDGE=1
+        - LIBGL_ALWAYS_SOFTWARE=1
 
     extends:
       file: gpus.yaml
