--- a/build.env
+++ b/build.env
@@ -1,13 +1,12 @@
 DOCKYMAN_VER=v1.2
 REPOSITORY=iitschri
 PROFILE=development
+RELEASE_DATE=2024.02
+VERSION=v7.9-distro_v2022.09.1-${RELEASE_DATE}
 
-VERSION=v7.8-ng
-
-ICUB_DISTRO=v2022.09.1
-PYICUB_BASE_DOCKER_SRC=${REPOSITORY}/robotology-superbuild-docker:${ICUB_DISTRO}
+PYICUB_BASE_DOCKER_SRC=iitschri/robotology-superbuild-docker:v2022.09.1-2024.02
 PYICUB_BASE_NAME=${REPOSITORY}/pyicub-docker:${VERSION}
-PYICUB_VERSION=v7.8-distro_v2022.09.1
+PYICUB_VERSION=v7.9-distro_v2022.09.1
 PYICUB_FRONTEND_VERSION=v8.0-ng
 PYICUB_FRONTEND_BASE_NAME=${REPOSITORY}/pyicub-frontend-docker:${PYICUB_FRONTEND_VERSION}
 
