Fixed logs path

--- a/pyicub.env
+++ b/pyicub.env
@@ -1,5 +1,5 @@
 PYICUB_LOGGING=true
-PYICUB_LOGGING_PATH= #PYICUB_LOGGING_PATH=/workdir/logs
+PYICUB_LOGGING_PATH=/workdir
 PYICUB_API=true
 PYICUB_API_FRONTEND_PORT=9000
 PYICUB_API_RESTMANAGER_HOST=localhost
