--- a/build.env
+++ b/build.env
@@ -1,14 +1,13 @@
 DOCKYMAN_VER=v1.2
 REPOSITORY=iitschri
 PROFILE=development
-RELEASE_DATE=2024.02
+RELEASE_DATE=2024.02.1
 VERSION=v7.9-distro_v2022.09.1-${RELEASE_DATE}
 
-PYICUB_BASE_DOCKER_SRC=iitschri/robotology-superbuild-docker:v2022.09.1-2024.02
-PYICUB_BASE_NAME=${REPOSITORY}/pyicub-docker:${VERSION}
+PYICUB_BASE_NAME=iitschri/pyicub-docker:${VERSION}
 PYICUB_VERSION=v7.9-distro_v2022.09.1
 PYICUB_FRONTEND_VERSION=v8.1-ng
-PYICUB_FRONTEND_BASE_NAME=${REPOSITORY}/pyicub-frontend-docker:${PYICUB_FRONTEND_VERSION}
+PYICUB_FRONTEND_BASE_NAME=iitschri/pyicub-frontend-docker:${PYICUB_FRONTEND_VERSION}
 
 COMPOSE_PROFILES=restapi
 
