--- a/build.env
+++ b/build.env
@@ -1,11 +1,11 @@
 DOCKYMAN_VER=v1.2
 REPOSITORY=iitschri
 PROFILE=development
-RELEASE_DATE=2024.02.1
-VERSION=v7.9-distro_v2022.09.1-${RELEASE_DATE}
+RELEASE_DATE=2024.02
+VERSION=8.0.0-${RELEASE_DATE}
 
 PYICUB_BASE_NAME=iitschri/pyicub-docker:${VERSION}
-PYICUB_VERSION=v7.9-distro_v2022.09.1
+PYICUB_VERSION=8.0.0
 PYICUB_FRONTEND_VERSION=v8.1-ng
 PYICUB_FRONTEND_BASE_NAME=iitschri/pyicub-frontend-docker:${PYICUB_FRONTEND_VERSION}
 
