--- a/build.env
+++ b/build.env
@@ -2,10 +2,11 @@ DOCKYMAN_VER=v1.2
 REPOSITORY=iitschri
 PROFILE=development
 RELEASE_DATE=2024.02
-VERSION=8.0.3-${RELEASE_DATE}
+PYICUB_VERSION=8.0.4
+VERSION=${PYICUB_VERSION}-${RELEASE_DATE}
 
 PYICUB_BASE_NAME=iitschri/pyicub-docker:${VERSION}
-PYICUB_VERSION=8.0.3
+
 PYICUB_FRONTEND_VERSION=v8.1-ng
 PYICUB_FRONTEND_BASE_NAME=iitschri/pyicub-frontend-docker:${PYICUB_FRONTEND_VERSION}
 
