--- a/icub.env
+++ b/icub.env
@@ -1,13 +1,16 @@
-# iCub configuration
 ICUB_SIMULATION=true
-ICUB_USER=icub
-ICUB_PSW=icub
 ICUB_HOST=icub-head
 ICUB_IP=10.0.0.2
-ICUBSRV_HOST=icubsrv
-ICUBSRV_IP=10.0.0.1
-ICUBSRV_PORT=10000
+ICUBSRV_HOST=localhost
 ICUB_APPS=/workdir/apps
-
-# YARP configuration
 YARP_FORWARD_LOG_ENABLE=1
+YARP_COLORED_OUTPUT=1
+YARP_QUIET=1
+
+ICUBSRV_NODE=icubsrv-node
+ICUB_NODE=icub-node
+SENSING_HUMAN_NODE=sensing-human-node
+SENSING_OBJECT_NODE=sensing-object-node
+SENSING_STICKER_NODE=sensing-sticker-node
+LANGUAGE_NODE=language-node
+GESTURES_NODE=gestures-node
