--- a/build.env
+++ b/build.env
@@ -1,13 +1,13 @@
-DOCKYMAN_VER=v1.2
+DOCKYMAN_VER=v1.4
 REPOSITORY=iitschri
 PROFILE=development
-RELEASE_DATE=2024.03
-PYICUB_VERSION=8.1.0
-VERSION=${PYICUB_VERSION}-${RELEASE_DATE}
+RELEASE_DATE=2025.01
+PYICUB_VERSION=8.2.3
+VERSION=${PYICUB_VERSION}
 
-PYICUB_BASE_NAME=iitschri/pyicub-docker:${VERSION}
+PYICUB_BASE_NAME=iitschri/pyicub-docker:${VERSION}_ubuntu22.04_robotology_v2024.08.0-${RELEASE_DATE}
 
-PYICUB_FRONTEND_VERSION=v8.3-ng
+PYICUB_FRONTEND_VERSION=v8.5-ng
 PYICUB_FRONTEND_BASE_NAME=iitschri/pyicub-frontend-docker:${PYICUB_FRONTEND_VERSION}
 
 COMPOSE_PROFILES=restapi
