--- a/pyicub.env
+++ b/pyicub.env
@@ -2,8 +2,8 @@ PYICUB_LOGGING=false
 PYICUB_LOGGING_PATH=/workdir
 PYICUB_API=true
 PYICUB_API_FRONTEND_PORT=9000
-PYICUB_API_RESTMANAGER_HOST=localhost
+PYICUB_API_RESTMANAGER_HOST=${ICUBSRV_HOST}
 PYICUB_API_RESTMANAGER_PORT=9001
-PYICUB_API_PROXY_HOST=localhost
+PYICUB_API_PROXY_HOST=${ICUBSRV_HOST}
 PYICUB_API_PROXY_PORT=9001
 PYICUB_API_PROXY_SCHEME=http
