--- a/.dockyman/profiles/local.yaml
+++ b/.dockyman/profiles/local.yaml
@@ -35,11 +35,11 @@ services:
         - XDG_DATA_DIRS=${XDG_DATA_DIRS:?err}
         - QT_X11_NO_MITSHM=1
         - NO_AT_BRIDGE=1
-        - LIBGL_ALWAYS_SOFTWARE=1
+        - LIBGL_ALWAYS_SOFTWARE=false
 
     extends:
       file: gpus.yaml
-      service: ${GPU_PROFILE:?err}
+      service: ${GPU_PROFILE:-no-gpu}
 
     working_dir: /workdir
 
