--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,5 +18,5 @@ jobs:
          
       - name: Build and push Docker image
         run: |
-          make -C .dockyman dev
+          make -C .dockyman development
           make -C .dockyman build          
