--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,26 @@
-version: '3.8'
+# MIT License
+#
+# Copyright (c) 2025 Istituto Italiano di Tecnologia (IIT)
+#                    Author: Davide De Tommaso (davide.detommaso@iit.it)
+#                    Project: Dockyman
+#
+# Permission is hereby granted, free of charge, to any person obtaining a copy
+# of this software and associated documentation files (the "Software"), to deal
+# in the Software without restriction, including without limitation the rights
+# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+# copies of the Software, and to permit persons to whom the Software is
+# furnished to do so, subject to the following conditions:
+#
+# The above copyright notice and this permission notice shall be included in all
+# copies or substantial portions of the Software.
+#
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+# SOFTWARE.
 
 services:
 
@@ -10,13 +32,13 @@ services:
       file: .dockyman/profiles/local.yaml
       service: local
 
-    env_file:
-      - .env
-      - icub.env
-      - pyicub.env
-
     command: ["/bin/bash", "-c", "terminator & bash /var/dockyman/scripts/initContainer.sh"]
     
+    env_file:
+      - .env
+
+    profiles: ["backend"]
+
     volumes:
       - type: bind
         source: ./scripts
@@ -26,31 +48,37 @@ services:
         source: ./workdir
         target: /workdir
 
-      - type: volume
-        source: pyicub-workspace
-        target: /home/icub/pyicub
-
-
   pyicub-frontend:
     image: ${PYICUB_FRONTEND_BASE_NAME}
     container_name: pyicub-frontend.${PYICUB_FRONTEND_VERSION}
 
-    profiles: ["restapi"]
-  
     env_file:
       - .env
-      - pyicub.env
+
+    profiles: ["frontend"]
 
     network_mode: host
 
     depends_on:
       - pyicub
 
-    volumes:
-      - type: volume
-        source: pyicub-frontend-workspace
-        target: /app/pyicub-frontend
+  
+  pyicub-test:
 
-volumes:
-  pyicub-workspace:
-  pyicub-frontend-workspace:
+    image: ${PYICUB_BASE_NAME:?err}.local
+
+    extends:
+      file: .dockyman/profiles/local.yaml
+      service: local
+    
+    env_file:
+      - .env
+
+    profiles: ["test"]
+
+    volumes:
+      - type: bind
+        source: ./scripts
+        target: /var/dockyman/scripts
+
+    command: ["/bin/bash", "-c", "bash /var/dockyman/scripts/runTests.sh"]
