Fixe Volumes VSCode

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -2,7 +2,7 @@
   "dockerComposeFile": ["compose.yaml"],
   "service": "pyicub",
   "workspaceFolder": "/home/icub/pyicub",
-  "initializeCommand": ". ./build.env && make -C .dockyman",
+  "initializeCommand": ". ./dockyman.env && make -C .dockyman",
   "overrideCommand": false,
   "shutdownAction": "stopCompose",
   "mounts": [
