--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -1,38 +1,14 @@
-# MIT License
-#
-# Copyright (c) 2025 Istituto Italiano di Tecnologia (IIT)
-#                    Author: Davide De Tommaso (davide.detommaso@iit.it)
-#                    Project: Dockyman
-#
-# Permission is hereby granted, free of charge, to any person obtaining a copy
-# of this software and associated documentation files (the "Software"), to deal
-# in the Software without restriction, including without limitation the rights
-# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-# copies of the Software, and to permit persons to whom the Software is
-# furnished to do so, subject to the following conditions:
-#
-# The above copyright notice and this permission notice shall be included in all
-# copies or substantial portions of the Software.
-#
-# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-# SOFTWARE.
-
 services:
 
   pyicub:
-    image: ${BASE_PROJECT_NAME}
+    image: ${PYICUB_IMAGE_NAME}
     container_name: pyicub
 
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ..
+      dockerfile: docker/Dockerfile.pyicub
       args:
-        DOCKER_SRC: ${PYICUB_IMAGE}
+        DOCKER_SRC: ${ROBOTOLOGY_IMAGE_NAME}
         LOCAL_USER_UID: ${LOCAL_USER_UID:-1000}
         LOCAL_USER_GID: ${LOCAL_USER_GID:-1000}
 
@@ -62,7 +38,8 @@ services:
       - SSH_AUTH_SOCK=/ssh-agent
 
     volumes:
-      - ./workdir:/workdir
+      - ../:$ROBOT_CODE/pyicub
+      - ./shared:/shared
       - /tmp/.X11-unix:/tmp/.X11-unix
       - ${HOME}/.config/pulse/cookie:/run/pulse/cookie
       - ${XDG_RUNTIME_DIR:-/tmp}/pulse:${XDG_RUNTIME_DIR:-/tmp}/pulse
@@ -75,8 +52,12 @@ services:
       - backend
 
   pyicub.frontend:
-    image: ${PYICUB_FRONTEND_IMAGE}
+    image: ${PYICUB_FRONTEND_IMAGE_NAME}
     container_name: pyicub-frontend
+
+    build:
+      context: .
+      dockerfile: Dockerfile.pyicub-frontend
 
     env_file:
       - .env
@@ -90,9 +71,32 @@ services:
       - pyicub
 
     volumes:
+      - pyicub-frontend-workspace:/workspace/pyicub-frontend
       - ${HOME}/.gitconfig:/root/.gitconfig:ro
       - ${HOME}/.ssh:/root/.ssh:ro
       - ${SSH_AUTH_SOCK:-/dev/null}:/ssh-agent
 
     profiles:
       - frontend
+
+  pyicub.test:
+    image: ${PYICUB_IMAGE_NAME}
+    container_name: pyicub-test
+
+    env_file:
+      - .env
+
+    command: ["/bin/bash", "-c", "bash $ROBOT_CODE/pyicub/scripts/tests.sh"]
+
+    environment:
+      - DISPLAY=:99
+
+    volumes:
+      - ./shared:/shared
+
+    profiles:
+      - test
+
+volumes:
+  pyicub-frontend-workspace:
+    name: pyicub-frontend-workspace
