--- a/compose.yaml
+++ b/compose.yaml
@@ -46,6 +46,8 @@ services:
     network_mode: host
     privileged: true
 
+    working_dir: /workdir
+
     runtime: ${DOCKER_RUNTIME:-runc}
 
     environment:
